// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation 1`] = `
"Terser Plugin Invalid Options

options should NOT have additional properties
"
`;

exports[`validation 2`] = `
"Terser Plugin Invalid Options

options.cache should be boolean
options.cache should be string
options.cache should match exactly one schema in oneOf
"
`;

exports[`validation 3`] = `
"Terser Plugin Invalid Options

options.parallel should be boolean
options.parallel should be integer
options.parallel should match exactly one schema in oneOf
"
`;

exports[`validation 4`] = `
"Terser Plugin Invalid Options

options.parallel should be boolean
options.parallel should be integer
options.parallel should match exactly one schema in oneOf
"
`;

exports[`validation 5`] = `
"Terser Plugin Invalid Options

options.sourceMap should be boolean
"
`;

exports[`validation 6`] = `
"Terser Plugin Invalid Options

options.terserOptions should be object
"
`;

exports[`validation 7`] = `
"Terser Plugin Invalid Options

options.warningsFilter should pass \\"instanceof\\" keyword validation
"
`;
